chungnam/2nd/CICD/k8s_file/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  namespace: wsc2025
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: 942035140074.dkr.ecr.ap-southeast-1.amazonaws.com/app-repo:v1.0.0
          ports:
            - containerPort: 80
