chungnam/2nd/CICD/k8s_file/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: wsc2025
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
